# char-index-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  pyproject.toml  server.py
.claude-plugin/: plugin.json
char_index_mcp/: __init__.py  server.py
char_index_mcp/tests/: __init__.py  test_mcp_server.py
skills/char-index-skill/: SKILL.md  examples.md
skills/char-index-skill/scripts/: char_ops.py
