[project]
name = "char-index-mcp"
version = "0.2.1"
description = "A Model Context Protocol server for character-level index-based string manipulation"
readme = "README.md"
authors = [
    {name = "agent-hanju", email = "agent.hanju@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]
keywords = ["mcp", "string-manipulation", "character-index", "text-processing", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/agent-hanju/char-index-mcp"
Repository = "https://github.com/agent-hanju/char-index-mcp"
Documentation = "https://github.com/agent-hanju/char-index-mcp#readme"
Issues = "https://github.com/agent-hanju/char-index-mcp/issues"
Source = "https://github.com/agent-hanju/char-index-mcp"

[project.scripts]
char-index-mcp = "char_index_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["char_index_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
